--- a/tech.html
+++ b/tech.html
@@ -152,6 +152,9 @@
       height: auto;
     }
   }
+      section[id] {
+      scroll-margin-top: 120px; /* 네비 높이에 맞게 조정 (100~150px 정도) */
+    }
 
 
   </style>
