--- a/tech.html
+++ b/tech.html
@@ -155,7 +155,38 @@
       section[id] {
       scroll-margin-top: 120px; /* 네비 높이에 맞게 조정 (100~150px 정도) */
     }
+#tech .card-image-cover {
+  width: 100%;
+  height: 100%; /* 10rem 고정 제거 */
+  object-fit: cover;
+  border-radius: .5rem;
+  display: block;
+}
 
+#tech .card-img-wrap {
+  position: relative;
+  overflow: hidden;
+  border-radius: .5rem;
+  flex: 1;
+  min-height: 240px; /* 이미지 영역 최소 보장 */
+}
+
+/* ✅ 데스크탑에서만 비율 조정 */
+@media (min-width: 1024px) {
+  #tech .tech-card {
+    flex-direction: row;
+    align-items: stretch;
+  }
+
+  #tech .tech-card .card-img-wrap {
+    width: 50%; /* 기존 45% → 확대 */
+    min-height: 260px;
+  }
+
+  #tech .tech-card .card-image-cover {
+    height: 100%;
+  }
+}
 
   </style>
   
@@ -358,7 +389,7 @@
     <!-- CE MDR 인증 카드 -->
     <article class="p-6 rounded-xl bg-white shadow-md card-border tech-card" data-aos="fade-up">
       <div class="card-img-wrap lg:w-2/5">
-        <img src="images/ce_mdr.jpg" alt="CE MDR 인증" class="card-image-cover">
+        <img src="images\Frame 5523.jpg" alt="CE MDR 인증" class="card-image-cover">
       </div>
       <div class="flex-1 flex flex-col justify-between">
         <div>
@@ -380,7 +411,7 @@
     <!-- 식약처 허가 카드 -->
     <article class="p-6 rounded-xl bg-white shadow-md card-border tech-card" data-aos="fade-up" data-aos-delay="80">
       <div class="card-img-wrap lg:w-2/5">
-        <img src="images/fda_water.jpg" alt="이동형 정수기 식약처 허가" class="card-image-cover">
+        <img src="images\Frame 5524.jpg" alt="이동형 정수기 식약처 허가" class="card-image-cover">
       </div>
       <div class="flex-1 flex flex-col justify-between">
         <div>
@@ -402,7 +433,7 @@
     <!-- 혈액여과기 임상 카드 -->
     <article class="p-6 rounded-xl bg-white shadow-md card-border tech-card" data-aos="fade-up" data-aos-delay="160">
       <div class="card-img-wrap lg:w-2/5">
-        <img src="images/clinical.jpg" alt="혈액여과기 임상" class="card-image-cover">
+        <img src="images\혈액여과기.jpg" alt="혈액여과기 임상" class="card-image-cover">
       </div>
       <div class="flex-1 flex flex-col justify-between">
         <div>
@@ -424,7 +455,7 @@
     <!-- 랩온어칩 카드 -->
     <article class="p-6 rounded-xl bg-white shadow-md card-border tech-card" data-aos="fade-up" data-aos-delay="240">
       <div class="card-img-wrap lg:w-2/5">
-        <img src="images/labonchip.jpg" alt="랩온어칩 특허 출원" class="card-image-cover">
+        <img src="images\Frame 5522.jpg" alt="랩온어칩 특허 출원" class="card-image-cover">
       </div>
       <div class="flex-1 flex flex-col justify-between">
         <div>
@@ -446,7 +477,7 @@
     <!-- ePTFE 개발 카드 -->
     <article class="p-6 rounded-xl bg-white shadow-md card-border tech-card" data-aos="fade-up" data-aos-delay="320">
       <div class="card-img-wrap lg:w-2/5">
-        <img src="images/eptfe.jpg" alt="ePTFE 개발 성공" class="card-image-cover">
+        <img src="images\EPTFE.jpg" alt="ePTFE 개발 성공" class="card-image-cover">
       </div>
       <div class="flex-1 flex flex-col justify-between">
         <div>
