--- a/overview.html
+++ b/overview.html
@@ -322,6 +322,27 @@ margin-bottom: 8px;
  font-size: 1rem;
  line-height: 1.5;
  }
+ #scrollTopBtn {
+  display: none; /* 처음엔 숨김 */
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  z-index: 100;
+  background-color: #0f62fe; /* 시노펙스 블루 */
+  color: white;
+  border: none;
+  padding: 12px 16px;
+  border-radius: 50%;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+  transition: all 0.3s ease;
+}
+
+#scrollTopBtn:hover {
+  background-color: #073b8a;
+  transform: translateY(-3px);
+}
    </style>
 
 </head>
@@ -584,7 +605,7 @@ margin-bottom: 8px;
     <section id="awards" class="section" data-aos="fade-up">
       <div class="mb-6 flex items-center justify-between">
         <div>
-          <h2 class="text-2xl font-bold">🏅 성과 & 수상</h2>
+          <h2 class="text-2xl font-bold">🏅 수상 & 선정</h2>
           <div class="sinofex-hr mt-3"></div>
           <p class="small-muted mt-3">주요 수상 내역과 연혁을 한 눈에 보여줍니다.</p>
         </div>
@@ -628,7 +649,7 @@ margin-bottom: 8px;
       </div>
     </section>
   </main>
-  
+<button id="scrollTopBtn" title="맨 위로">▲</button>  
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 <script src="https://unpkg.com/countup.js"></script> 
 <script>
@@ -795,6 +816,26 @@ margin-bottom: 8px;
             });
         }
     });
+      // 버튼 요소 가져오기
+  const scrollTopBtn = document.getElementById("scrollTopBtn");
+
+  // 스크롤 감지해서 버튼 표시/숨김
+  window.onscroll = function() {
+    if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+      scrollTopBtn.style.display = "block";
+    } else {
+      scrollTopBtn.style.display = "none";
+    }
+  };
+
+  // 버튼 클릭 시 맨 위로 이동
+  scrollTopBtn.addEventListener("click", function() {
+    window.scrollTo({
+      top: 0,
+      behavior: "smooth"
+    });
+  });
 </script>
+
 </body>
 </html>
