--- a/tech.html
+++ b/tech.html
@@ -134,59 +134,34 @@
     background: linear-gradient(to bottom, rgba(0,0,0,0.05), rgba(0,0,0,0));
   }
 
-  /* responsive card layout */
-  .tech-card {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
+.tech-card {
+  display: flex;
+  flex-direction: row; /* 항상 가로 배치 */
+  align-items: stretch;
+  gap: 1rem;
+}
 
-  @media (min-width: 1024px) {
-    .tech-card {
-      flex-direction: row;
-      align-items: stretch;
-    }
+.tech-card img {
+  width: 45%;
+  height: auto;
+}
 
-    .tech-card img {
-      width: 45%;
-      height: auto;
-    }
-  }
-      section[id] {
-      scroll-margin-top: 120px; /* 네비 높이에 맞게 조정 (100~150px 정도) */
-    }
+#tech .card-img-wrap {
+  flex: 1;
+  min-height: 240px;
+  overflow: hidden;
+  border-radius: .5rem;
+}
+
 #tech .card-image-cover {
   width: 100%;
-  height: 100%; /* 10rem 고정 제거 */
+  height: 100%;
   object-fit: cover;
   border-radius: .5rem;
   display: block;
 }
 
-#tech .card-img-wrap {
-  position: relative;
-  overflow: hidden;
-  border-radius: .5rem;
-  flex: 1;
-  min-height: 240px; /* 이미지 영역 최소 보장 */
-}
 
-/* ✅ 데스크탑에서만 비율 조정 */
-@media (min-width: 1024px) {
-  #tech .tech-card {
-    flex-direction: row;
-    align-items: stretch;
-  }
-
-  #tech .tech-card .card-img-wrap {
-    width: 50%; /* 기존 45% → 확대 */
-    min-height: 260px;
-  }
-
-  #tech .tech-card .card-image-cover {
-    height: 100%;
-  }
-}
 
   </style>
   
