--- a/overview.html
+++ b/overview.html
@@ -384,12 +384,12 @@ margin-bottom: 8px;
     </div>
 
     <!-- 메뉴 -->
-    <div class="hidden md:flex items-center gap-7 lg:gap-8">
-      <a href="#tech" class="nav-item text-sm md:text-base font-medium text-slate-700 hover:text-[var(--brand)] px-3 py-2">전시 & 학술대회</a>
-      <a href="#validation" class="nav-item text-sm md:text-base font-medium text-slate-700 hover:text-[var(--brand)] px-3 py-2">신규 계약·MOU</a>
-      <a href="#business" class="nav-item text-sm md:text-base font-medium text-slate-700 hover:text-[var(--brand)] px-3 py-2">인증·특허 출원</a>
-      <a href="#awards" class="nav-item text-sm md:text-base font-medium text-slate-700 hover:text-[var(--brand)] px-3 py-2">성과 & 수상</a>
-    </div>
+    <div class="hidden md:flex items-center gap-5 whitespace-nowrap">
+  <a href="#tech" class="nav-item text-sm font-medium text-slate-700 hover:text-[var(--brand)] px-2 py-1">전시 & 학술대회</a>
+  <a href="#validation" class="nav-item text-sm font-medium text-slate-700 hover:text-[var(--brand)] px-2 py-1">신규 계약·MOU</a>
+  <a href="#business" class="nav-item text-sm font-medium text-slate-700 hover:text-[var(--brand)] px-2 py-1">인증·특허 출원</a>
+  <a href="#awards" class="nav-item text-sm font-medium text-slate-700 hover:text-[var(--brand)] px-2 py-1">성과 & 수상</a>
+</div>
 
     <!-- 메뉴 버튼 -->
     <div class="flex items-center gap-3 flex-shrink-0">
