--- a/tech.html
+++ b/tech.html
@@ -134,32 +134,59 @@
     background: linear-gradient(to bottom, rgba(0,0,0,0.05), rgba(0,0,0,0));
   }
 
-.tech-card {
-  display: flex;
-  flex-direction: row; /* 항상 가로 배치 */
-  align-items: stretch;
-  gap: 1rem;
-}
+   .tech-card {
+      display: flex;
+      flex-direction: row; /* 항상 가로 배치 */
+      align-items: stretch;
+      gap: 1rem;
+      margin-bottom: 2rem;
+    }
 
-.tech-card img {
-  width: 45%;
-  height: auto;
-}
+    .tech-card img {
+      width: 45%;
+      height: auto;
+      border-radius: .5rem;
+      object-fit: cover;
+    }
 
-#tech .card-img-wrap {
-  flex: 1;
-  min-height: 240px;
-  overflow: hidden;
-  border-radius: .5rem;
-}
+    #tech .card-img-wrap {
+      flex: 1;
+      min-height: 240px;
+      overflow: hidden;
+      border-radius: .5rem;
+    }
 
-#tech .card-image-cover {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: .5rem;
-  display: block;
-}
+    #tech .card-image-cover {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: .5rem;
+      display: block;
+    }
+
+    .card-text {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      margin-bottom: .5rem;
+    }
+
+    p {
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #333;
+    }
+      .page-wrap {
+      width: 900px; /* 항상 900px 고정 */
+      background: white;
+      padding: 2rem;
+      box-sizing: border-box;
+    }
 
 
 
@@ -221,36 +248,51 @@
     </button>
   </div>
 </div>
-  <header class="fixed w-full z-40 top-4 left-0 px-4">
-    <nav class="max-w-6xl mx-auto flex items-center justify-between p-2 sm:p-3 rounded-xl nav-blur card">
+ <header class="fixed w-full z-40 top-4 left-0 px-4">
+  <nav class="max-w-6xl mx-auto flex items-center justify-between p-2 sm:p-3 rounded-xl nav-blur card">
+    <div class="flex items-center gap-3">
       <div class="flex items-center gap-3">
-        <div class="flex items-center gap-3">
-          <div class="w-10 h-10 rounded-lg flex items-center justify-center flex-shrink-0"> <img src="images\synopex_ci_e (2) 2.png"></div>
-          <div class="hidden sm:block"> 
-           <div class="text-base md:text-lg font-bold leading-tight">2025 SYNOPEX NEWSLETTER</div>
-        <div class="text-xs md:text-sm small-muted">시노펙스 2025 한해를 한눈에</div>
+        <!-- 로고 -->
+        <div class="w-10 h-10 rounded-lg flex items-center justify-center flex-shrink-0">
+          <img src="images/synopex_ci_e (2) 2.png" alt="Synopex Logo">
+        </div>
+
+        <!-- ✅ PC / 태블릿용 (900px 초과) -->
+        <div class="hidden max-[900px]:hidden min-[901px]:block">
+          <div class="text-base md:text-lg font-bold leading-tight">
+            2025 SYNOPEX NEWSLETTER
           </div>
-          <div class="block sm:hidden text-sm font-bold truncate max-w-[150px]">
-            SYNOPEX NEWSLETTER
+          <div class="text-xs md:text-sm small-muted">
+            시노펙스 2025 한해를 한눈에
           </div>
         </div>
-      </div>
 
-      <div class="hidden md:flex items-center gap-7 lg:gap-8">
-        <a href="#tech" class="nav-item text-sm md:text-base font-medium text-slate-700 hover:text-[var(--brand)] px-3 py-2">1. 기술성과</a>
-        <a href="#field" class="nav-item text-sm md:text-base font-medium text-slate-700 hover:text-[var(--brand)] px-3 py-2">2. 현장검증</a>
-        <a href="#business" class="nav-item text-sm md:text-base font-medium text-slate-700 hover:text-[var(--brand)] px-3 py-2">3. 사업 확장성과</a>
+        <!-- ✅ 모바일용 (900px 이하에서만 표시) -->
+        <div class="hidden max-[900px]:flex flex-col text-left leading-tight">
+          <div class="text-lg font-bold">2025 SYNOPEX</div>
+          <div class="text-lg font-bold">NEWSLETTER</div>
+          <div class="text-xs text-gray-600">시노펙스 2025 한해를 한눈에</div>
+        </div>
       </div>
+    </div>
 
-      <div class="flex items-center gap-3 flex-shrink-0">
-        <button class="p-2 rounded-md" aria-label="menu">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon-sm" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-          </svg>
-        </button>
-      </div>
-    </nav>
-  </header>
+    <!-- 네비게이션 -->
+    <div class="hidden md:flex items-center gap-7 lg:gap-8">
+      <a href="#tech" class="nav-item text-sm md:text-base font-medium text-slate-700 hover:text-[var(--brand)] px-3 py-2">1. 기술성과</a>
+      <a href="#field" class="nav-item text-sm md:text-base font-medium text-slate-700 hover:text-[var(--brand)] px-3 py-2">2. 현장검증</a>
+      <a href="#business" class="nav-item text-sm md:text-base font-medium text-slate-700 hover:text-[var(--brand)] px-3 py-2">3. 사업 확장성과</a>
+    </div>
+
+    <!-- 메뉴 버튼 -->
+    <div class="flex items-center gap-3 flex-shrink-0">
+      <button class="p-2 rounded-md" aria-label="menu">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon-sm" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
+    </div>
+  </nav>
+</header>
 
   <!-- =========================
        Main content
