--- a/tech.html
+++ b/tech.html
@@ -705,8 +705,8 @@
       <h3 class="text-2xl font-semibold text-[var(--brand)]">시노펙스는 성과로 증명합니다</h3>
       <p class="text-sm text-gray-600 mt-3">기술의 탄생, 현장검증, 그리고 시장 확장 — 3단 스토리 플로우로 연결되는 여정에 함께해 주세요.</p>
       <div class="mt-6 flex flex-col sm:flex-row items-center justify-center gap-3">
-        <a href="#tech" class="px-4 py-2 rounded-md border border-[var(--brand)] text-[var(--brand)]">시노펙스 2025 한눈에 보기</a>
-        <a href="#business" class="px-4 py-2 rounded-md bg-[var(--brand)] text-white">사업 성과 자세히</a>
+        <a href="https://goodlight1234.github.io/synopex2025/overview.html" class="px-4 py-2 rounded-md border border-[var(--brand)] text-[var(--brand)]">시노펙스 2025 한눈에 보기</a>
+        <a href="#https://goodlight1234.github.io/synopex2025/interview.html" class="px-4 py-2 rounded-md bg-[var(--brand)] text-white">성과 뒤에 숨은 사람들 이야기</a>
       </div>
     </section>
 
