--- a/cover.html
+++ b/cover.html
@@ -48,14 +48,20 @@
        </colgroup>
        <tbody>
         <tr>
-         <td style="vertical-align: top; padding-right: 7.5px;"><p style="line-height: 1.5; padding: 0px; margin: 0px;"><a data-href="https://goodlight1234.github.io/SYNOPEX-2025-Year-in-Review/" target="_blank" href="https://goodlight1234.github.io/SYNOPEX-2025-Year-in-Review/"><span class="se-drawing-object-wrapper se-image CToWUd" style="vertical-align: baseline; text-indent: 0px; width: calc(100% + 0px); display: block;"><img style="max-width: 100%; height: auto; vertical-align: bottom; width: calc(100% + 0px);" alt="시노펙스 40주년 비전 발표" data-bit="iit" src="https://github.com/goodlight1234/synopex2025/blob/main/images/Frame%205520.png?raw=true"></span></a></p></td>
+         <td style="vertical-align: top; padding-right: 7.5px;"><p style="line-height: 1.5; padding: 0px; margin: 0px;"><a data-href="https://goodlight1234.github.io/synopex2025/overview.html
+" target="_blank" href="https://goodlight1234.github.io/synopex2025/overview.html
+"><span class="se-drawing-object-wrapper se-image CToWUd" style="vertical-align: baseline; text-indent: 0px; width: calc(100% + 0px); display: block;"><img style="max-width: 100%; height: auto; vertical-align: bottom; width: calc(100% + 0px);" alt="시노펙스 40주년 비전 발표" data-bit="iit" src="https://github.com/goodlight1234/synopex2025/blob/main/images/Frame%205520.png?raw=true"></span></a></p></td>
          <td style="vertical-align: top; padding-left: 7.5px;">
           <div class="se-div" style="font-family: &quot;Noto Sans KR&quot;, sans-serif; line-height: 1.7;">
-           <p style="line-height: 1.5; padding: 0px; margin: 0px;"><a style="text-decoration: underline; color: rgb(0, 0, 0);" data-href="https://goodlight1234.github.io/SYNOPEX-2025-Year-in-Review/"   rel="noopener" target="_blank" href="https://goodlight1234.github.io/SYNOPEX-2025-Year-in-Review/"><span style="font-weight: bold; font-size: 20px;">시노펙스 2025 한눈에</span></a></p>
+           <p style="line-height: 1.5; padding: 0px; margin: 0px;"><a style="text-decoration: underline; color: rgb(0, 0, 0);" data-href="https://goodlight1234.github.io/synopex2025/overview.html
+"   rel="noopener" target="_blank" href="https://goodlight1234.github.io/synopex2025/overview.html
+"><span style="font-weight: bold; font-size: 20px;">시노펙스 2025 한눈에</span></a></p>
            <p style="font-size: 16px; color: rgb(0, 0, 0); text-align: justify; line-height: 1.5; padding: 0px; margin: 10px 0px 0px;"><span>올해 시노펙스의 기술 성과와 사업 확장을 한눈에 보기 쉽게 정리했습니다. <br>CE MDR 인증, ePTFE 국산화, 글로벌 MOU등 2025년의 핵심 지표를 빠르게 확인하세요.</span></p>
            <div class="se-div" style="text-align: right; margin-top: 15px;">
             <p style="line-height: 1.5; padding: 0px; margin: 0px;"><br></p>
-            <p style="line-height: 1.5; padding: 0px; margin: 0px;"><a style="text-decoration: underline; font-size: 12px; color: rgb(116, 117, 121);" data-href="https://goodlight1234.github.io/SYNOPEX-2025-Year-in-Review/" rel="noopener" target="_blank" href="https://goodlight1234.github.io/SYNOPEX-2025-Year-in-Review/"><span>&gt;&gt;&gt;자세히 보기</span></a></p>
+            <p style="line-height: 1.5; padding: 0px; margin: 0px;"><a style="text-decoration: underline; font-size: 12px; color: rgb(116, 117, 121);" data-href="https://goodlight1234.github.io/synopex2025/overview.html
+" rel="noopener" target="_blank" href="https://goodlight1234.github.io/synopex2025/overview.html
+"><span>&gt;&gt;&gt;자세히 보기</span></a></p>
            </div>
           </div></td>
         </tr>
@@ -75,14 +81,14 @@
        </colgroup>
        <tbody>
         <tr>
-         <td style="vertical-align: top; padding-right: 7.5px;"><p style="line-height: 1.5; padding: 0px; margin: 0px;"><a data-href="https://goodlight1234.github.io/skilltomarket/" target="_blank" href="https://goodlight1234.github.io/skilltomarket/"><span class="se-drawing-object-wrapper se-image CToWUd" style="vertical-align: baseline; text-indent: 0px; width: calc(100% + 0px); display: block;"><img style="max-width: 100%; height: auto; vertical-align: bottom; width: calc(100% + 0px);" alt="SYNONEWS" data-bit="iit" src="https://github.com/goodlight1234/synopex2025/blob/main/images/ChatGPT%20Image%202025%EB%85%84%2011%EC%9B%94%2012%EC%9D%BC%20%EC%98%A4%ED%9B%84%2002_28_18.png?raw=true"> </span></a></p></td>
+         <td style="vertical-align: top; padding-right: 7.5px;"><p style="line-height: 1.5; padding: 0px; margin: 0px;"><a data-href="https://goodlight1234.github.io/synopex2025/tech.html" target="_blank" href="https://goodlight1234.github.io/synopex2025/tech.html"><span class="se-drawing-object-wrapper se-image CToWUd" style="vertical-align: baseline; text-indent: 0px; width: calc(100% + 0px); display: block;"><img style="max-width: 100%; height: auto; vertical-align: bottom; width: calc(100% + 0px);" alt="SYNONEWS" data-bit="iit" src="https://github.com/goodlight1234/synopex2025/blob/main/images/ChatGPT%20Image%202025%EB%85%84%2011%EC%9B%94%2012%EC%9D%BC%20%EC%98%A4%ED%9B%84%2002_28_18.png?raw=true"> </span></a></p></td>
          <td style="vertical-align: top; padding-left: 7.5px;">
           <div class="se-div" style="font-family: &quot;Noto Sans KR&quot;, sans-serif; line-height: 1.7;">
-           <p style="line-height: 1.5; padding: 0px; margin: 0px;"><a style="text-decoration: underline; color: rgb(0, 0, 0);" data-href="https://goodlight1234.github.io/skilltomarket/"   rel="noopener" target="_blank" href="https://goodlight1234.github.io/skilltomarket/"><span style="font-weight: bold; font-size: 20px;">기술이 성과가 되다</span></a></p>
+           <p style="line-height: 1.5; padding: 0px; margin: 0px;"><a style="text-decoration: underline; color: rgb(0, 0, 0);" data-href="https://goodlight1234.github.io/synopex2025/tech.html"   rel="noopener" target="_blank" href="https://goodlight1234.github.io/synopex2025/tech.html"><span style="font-weight: bold; font-size: 20px;">기술이 성과가 되다</span></a></p>
            <p style="font-size: 16px; color: rgb(0, 0, 0); text-align: justify; line-height: 1.5; padding: 0px; margin: 10px 0px 0px;"><span>기술이 어떻게 현장에서 검증되고,그 결과가 어떤 성과와 확장으로 이어졌는지 각 기술성과 뒤에 숨은 구체적인 변화와 의미를 상세히 소개합니다.</span></p>
            <div class="se-div" style="text-align: right; margin-top: 15px;">
             <p style="line-height: 1.5; padding: 0px; margin: 0px;"><br></p>
-            <p style="line-height: 1.5; padding: 0px; margin: 0px;"><a style="text-decoration: underline; font-size: 12px; color: rgb(116, 117, 121);" data-href="https://goodlight1234.github.io/skilltomarket/"  rel="noopener" target="_blank" href="https://goodlight1234.github.io/skilltomarket/"><span>&gt;&gt;&gt;자세히 보기</span></a></p>
+            <p style="line-height: 1.5; padding: 0px; margin: 0px;"><a style="text-decoration: underline; font-size: 12px; color: rgb(116, 117, 121);" data-href="https://goodlight1234.github.io/synopex2025/tech.html"  rel="noopener" target="_blank" href="https://goodlight1234.github.io/synopex2025/tech.html"><span>&gt;&gt;&gt;자세히 보기</span></a></p>
            </div>
           </div></td>
         </tr>
@@ -102,14 +108,20 @@
        </colgroup>
        <tbody>
         <tr>
-         <td style="vertical-align: top; padding-right: 7.5px;"><p style="line-height: 1.5; padding: 0px; margin: 0px;"><a data-href="https://goodlight1234.github.io/synonews/" target="_blank" href="https://goodlight1234.github.io/synonews/"><span class="se-drawing-object-wrapper se-image CToWUd" style="vertical-align: baseline; text-indent: 0px; width: calc(100% + 0px); display: block;"><img style="max-width: 100%; height: auto; vertical-align: bottom; width: calc(100% + 0px);" alt="SYNONEWS" data-bit="iit" src="https://ci3.googleusercontent.com/meips/ADKq_NYPFXir_G4U-imKWBbWBbIvIh1W2eLjHgu5UvHztUEfwzZDRRofhr8u53xHd7WYI7EizFE_039-WM0d3T6iJr8EnCwEfyOglOpra_BcDOceGOvdnQ=s0-d-e1-ft#https://img2.stibee.com/440059_2866288_1753238024966865848.jpg"></span></a></p></td>
+         <td style="vertical-align: top; padding-right: 7.5px;"><p style="line-height: 1.5; padding: 0px; margin: 0px;"><a data-href="https://goodlight1234.github.io/synopex2025/interview.html
+" target="_blank" href="https://goodlight1234.github.io/synopex2025/interview.html
+"><span class="se-drawing-object-wrapper se-image CToWUd" style="vertical-align: baseline; text-indent: 0px; width: calc(100% + 0px); display: block;"><img style="max-width: 100%; height: auto; vertical-align: bottom; width: calc(100% + 0px);" alt="SYNONEWS" data-bit="iit" src="https://ci3.googleusercontent.com/meips/ADKq_NYPFXir_G4U-imKWBbWBbIvIh1W2eLjHgu5UvHztUEfwzZDRRofhr8u53xHd7WYI7EizFE_039-WM0d3T6iJr8EnCwEfyOglOpra_BcDOceGOvdnQ=s0-d-e1-ft#https://img2.stibee.com/440059_2866288_1753238024966865848.jpg"></span></a></p></td>
          <td style="vertical-align: top; padding-left: 7.5px;">
           <div class="se-div" style="font-family: &quot;Noto Sans KR&quot;, sans-serif; line-height: 1.7;">
-           <p style="line-height: 1.5; padding: 0px; margin: 0px;"><a style="text-decoration: underline; color: rgb(0, 0, 0);" data-href="https://goodlight1234.github.io/synonews/" data-hyperlink-id="se_5a542330-0919-459d-aa4c-ed7a5e71719a" data-saferedirecturl="https://www.google.com/url?q=https://goodlight1234.github.io/synonews/&amp;source=gmail&amp;ust=1756866069273000&amp;usg=AOvVaw33Z0lcG6hBoXwpRV2al_PU" rel="noopener" target="_blank" href="https://goodlight1234.github.io/synonews/"><span style="font-weight: bold; font-size: 20px;">SYNONEWS</span></a></p>
-           <p style="font-size: 14px; color: rgb(0, 0, 0); text-align: justify; line-height: 1.5; padding: 0px; margin: 10px 0px 0px;"><span>친환경부터 첨단기술까지…시노펙스의 지속가능한 성장 스토리를 한눈에 볼 수 있습니다. ESG 활동부터 혈액 여과기 개발, 정기 주주 총회까지 2025 시노펙스의 소식을 확인해 보세요.</span></p>
+           <p style="line-height: 1.5; padding: 0px; margin: 0px;"><a style="text-decoration: underline; color: rgb(0, 0, 0);" data-href="https://goodlight1234.github.io/synopex2025/interview.html
+"  rel="noopener" target="_blank" href="https://goodlight1234.github.io/synopex2025/interview.html
+"><span style="font-weight: bold; font-size: 20px;">시노펙스 인사이드</span></a></p>
+           <p style="font-size: 16px; color: rgb(0, 0, 0); text-align: justify; line-height: 1.5; padding: 0px; margin: 10px 0px 0px;"><span>시노펙스 2025 성과 뒤 많은 사람의 노력들이 숨겨져 있습니다. 주요 구성원들의 생생한 인터뷰를 통해 한 해의 성과와 다음 단계의 방향성을 함께 살펴봅니다. </span></p>
            <div class="se-div" style="text-align: right; margin-top: 15px;">
             <p style="line-height: 1.5; padding: 0px; margin: 0px;"><br></p>
-            <p style="line-height: 1.5; padding: 0px; margin: 0px;"><a style="text-decoration: underline; font-size: 12px; color: rgb(116, 117, 121);" data-href="https://goodlight1234.github.io/synonews/" data-hyperlink-id="se_daf1ed6c-a9db-4faa-939c-32194dc01709" data-saferedirecturl="https://www.google.com/url?q=https://goodlight1234.github.io/synonews/&amp;source=gmail&amp;ust=1756866069273000&amp;usg=AOvVaw33Z0lcG6hBoXwpRV2al_PU" rel="noopener" target="_blank" href="https://goodlight1234.github.io/synonews/"><span>&gt;&gt;&gt;자세히 보기</span></a></p>
+            <p style="line-height: 1.5; padding: 0px; margin: 0px;"><a style="text-decoration: underline; font-size: 12px; color: rgb(116, 117, 121);" data-href="https://goodlight1234.github.io/synopex2025/interview.html
+"  rel="noopener" target="_blank" href="https://goodlight1234.github.io/synopex2025/interview.html
+"><span>&gt;&gt;&gt;자세히 보기</span></a></p>
            </div>
           </div></td>
         </tr>
