--- a/tech.html
+++ b/tech.html
@@ -283,9 +283,9 @@
 
     <!-- 네비게이션 -->
     <div class="hidden md:flex items-center gap-7 lg:gap-8">
-      <a href="#tech" class="nav-item text-sm md:text-base font-medium text-slate-700 hover:text-[var(--brand)] px-3 py-2">1. 기술성과</a>
-      <a href="#field" class="nav-item text-sm md:text-base font-medium text-slate-700 hover:text-[var(--brand)] px-3 py-2">2. 현장검증</a>
-      <a href="#business" class="nav-item text-sm md:text-base font-medium text-slate-700 hover:text-[var(--brand)] px-3 py-2">3. 사업 확장성과</a>
+      <a href="#tech" class="nav-item text-sm md:text-base font-medium text-slate-700 hover:text-[var(--brand)] px-3 py-2">기술성과</a>
+      <a href="#field" class="nav-item text-sm md:text-base font-medium text-slate-700 hover:text-[var(--brand)] px-3 py-2">현장검증</a>
+      <a href="#business" class="nav-item text-sm md:text-base font-medium text-slate-700 hover:text-[var(--brand)] px-3 py-2">사업 확장성과</a>
     </div>
 
     <!-- 메뉴 버튼 -->
