--- a/overview.html
+++ b/overview.html
@@ -450,6 +450,7 @@ margin-bottom: 8px;
           </div>
           <div class="chart-wrap mt-4">
       <canvas id="lineChart"class="h-full w-full"></canvas>
+      <span class="small-muted">매출액에 대한 설명을 넣는다</span>
 </div>
           
         </aside>
