--- a/interview.html
+++ b/interview.html
@@ -593,9 +593,9 @@
     <div id="mobileMenu"
         class="fixed top-0 right-0 w-3/4 max-w-sm h-full bg-white/70 backdrop-blur-lg shadow-xl z-50 transform translate-x-full transition-transform duration-500 ease-in-out">
         <div class="p-6 space-y-6 text-lg font-medium text-slate-800">
-            <a href="#hero" class="block hover:text-blue-600">1) 시노펙스 2025 한눈에 보기</a>
-            <a href="https://goodlight1234.github.io/synopex2025/tech.html" class="block hover:text-blue-600">2) 기술 & 마케팅 활동</a>
-            <a href="#validation" class="block hover:text-blue-600">3) 임직원 인터뷰</a>
+            <a href="https://goodlight1234.github.io/synopex2025/overview.html" class="block hover:text-blue-600">1) 시노펙스 2025 한눈에 보기</a>
+            <a href="https://goodlight1234.github.io/synopex2025/tech.html" class="block hover:text-blue-600">2) 기술에서 성과로</a>
+            <a href="#validation" class="block hover:text-blue-600">3) 시노펙스 인사이드</a>
             <a href="#business" class="block hover:text-blue-600">4) 인사이트펙스</a>
             <a href="#awards" class="block hover:text-blue-600">5) 2026 계획</a>
             <a href="#news" class="block hover:text-blue-600">6) 뉴스 아카이브</a>
@@ -625,8 +625,8 @@
             </div>
 
             <div class="hidden md:flex items-center gap-5 whitespace-nowrap">
-                <a href="#tech" class="nav-item text-sm font-medium text-slate-700 hover:text-[var(--brand)] px-2 py-1">연구개발</a>
-                <a href="#validation" class="nav-item text-sm font-medium text-slate-700 hover:text-[var(--brand)] px-2 py-1">글로벌 마케팅</a>
+                <a href="#tech" class="nav-item text-sm font-medium text-slate-700 hover:text-[var(--brand)] px-2 py-1">ePTFE 국산화</a>
+                <a href="#validation" class="nav-item text-sm font-medium text-slate-700 hover:text-[var(--brand)] px-2 py-1">혈액여과기 MOU</a>
                 <a href="#business" class="nav-item text-sm font-medium text-slate-700 hover:text-[var(--brand)] px-2 py-1">생산·품질</a>
                 <a href="#awards" class="nav-item text-sm font-medium text-slate-700 hover:text-[var(--brand)] px-2 py-1">경영 & 비전</a>
             </div>
