--- a/tech.html
+++ b/tech.html
@@ -402,7 +402,7 @@
   <div class="flex items-start justify-between mb-6">
     <div>
       <h2 class="text-2xl md:text-3xl font-bold mb-4" data-aos="fade-right">1. 기술성과</h2>
-      <p class="text-gray-600 max-w-2xl">2025년, 시노펙스는 단순한 필터 제조사를 넘어 바이오·필터 분야에서 자립형 핵심소재·기술을 확보했습니다.</p>
+      <p class="text-gray-600">2025년, 시노펙스는 단순한 필터 제조사를 넘어 바이오·필터 분야에서 자립형 핵심소재·기술을 확보했습니다.</p>
     </div>
   </div>
 
@@ -711,7 +711,7 @@
       <p class="text-sm text-gray-600 mt-3">기술의 탄생, 현장검증, 그리고 시장 확장 — 3단 스토리 플로우로 연결되는 여정에 함께해 주세요.</p>
       <div class="mt-6 flex flex-col sm:flex-row items-center justify-center gap-3">
         <a href="https://goodlight1234.github.io/synopex2025/overview.html" class="px-4 py-2 rounded-md border border-[var(--brand)] text-[var(--brand)]">시노펙스 2025 한눈에 보기</a>
-        <a href="#https://goodlight1234.github.io/synopex2025/interview.html" class="px-4 py-2 rounded-md bg-[var(--brand)] text-white">성과 뒤에 숨은 사람들 이야기</a>
+        <a href="https://goodlight1234.github.io/synopex2025/interview.html" class="px-4 py-2 rounded-md bg-[var(--brand)] text-white">성과 뒤에 숨은 사람들 이야기</a>
       </div>
     </section>
 
