--- a/overview.html
+++ b/overview.html
@@ -354,11 +354,11 @@ margin-bottom: 8px;
   class="fixed top-0 right-0 w-3/4 max-w-sm h-full bg-white/70 backdrop-blur-lg shadow-xl z-50 transform translate-x-full transition-transform duration-500 ease-in-out">
   <div class="p-6 space-y-6 text-lg font-medium text-slate-800">
     <a href="#hero" class="block hover:text-blue-600">1) 시노펙스 2025 한눈에 보기</a>
-    <a href="https://goodlight1234.github.io/synopex2025/tech.html" class="block hover:text-blue-600">2) 기술 & 마케팅 활동</a>
-    <a href="#validation" class="block hover:text-blue-600">3) 임직원 인터뷰</a>
+    <a href="https://goodlight1234.github.io/synopex2025/tech.html" class="block hover:text-blue-600">2) 기술에서 성과로</a>
+    <a href="https://goodlight1234.github.io/synopex2025/interview.html" class="block hover:text-blue-600">3) 시노펙스 인사이드</a>
     <a href="#business" class="block hover:text-blue-600">4) 인사이트펙스</a>
     <a href="#awards" class="block hover:text-blue-600">5) 2026 계획</a>
-    <a href="#news" class="block hover:text-blue-600">6) 뉴스 아카이브</a>
+    <a href="https://goodlight1234.github.io/report/" class="block hover:text-blue-600">6) 뉴스 아카이브</a>
 
     <button id="closeMenu"
       class="mt-8 w-full px-5 py-2 bg-blue-600 text-white rounded-lg shadow-md hover:bg-blue-700 transition">
