--- a/tech.html
+++ b/tech.html
@@ -245,7 +245,7 @@
     <a href="#validation" class="block hover:text-blue-600">3) 임직원 인터뷰</a>
     <a href="#business" class="block hover:text-blue-600">4) 인사이트펙스</a>
     <a href="#awards" class="block hover:text-blue-600">5) 2026 계획</a>
-    <a href="#news" class="block hover:text-blue-600">6) 뉴스 아카이브</a>
+    <a href="https://goodlight1234.github.io/report/" class="block hover:text-blue-600">6) 뉴스 아카이브</a>
 
     <button id="closeMenu"
       class="mt-8 w-full px-5 py-2 bg-blue-600 text-white rounded-lg shadow-md hover:bg-blue-700 transition">
